<resources>
    <string name="app_name">Browse</string>
    <string name="action_stop">Stop</string>
    <string name="action_reload">Reload</string>
    <string name="action_forward">Forward</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_tab">New tab</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="action_add_to_home_screen">Add to Home screen</string>
	<string name="about_summary">A fast, simple and open source light-weight web browser for Android.
        \n
        \nMohammed Sazid Al Rashid
        \n<a href="https://github.com/sazid/Browse/">https://github.com/sazid/Browse/</a>
    </string>
    <string name="loading_video">Loading video…</string>
    <string name="title_activity_browse_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_about">About</string>

    <string name="pref_title_desktop_mode">Desktop mode</string>
    <string name="pref_description_desktop_mode">Use desktop versions of sites you visit</string>

    <string name="pref_title_image_loading">Load images</string>
    <string name="pref_description_image_loading">Automatically load images when you visit websites.</string>

    <string name="pref_title_cookies">Cookies</string>

    <string name="pref_title_third_party_cookies">3rd party cookies</string>

    <string name="pref_title_mixed_content">Allow mixed content</string>
    <string name="pref_description_mixed_content">HTTP content being loaded inside HTTPS sites</string>

    <string name="pref_title_home_page">Home page</string>
    <string name="pref_default_home_page">https://google.com</string>

    <string name="pref_title_search_engine">Default search engine</string>
    <string-array name="pref_search_engine_list_titles">
        <item>Google</item>
        <item>Bing</item>
        <item>Yahoo</item>
        <item>DuckDuckGo</item>
        <item>YouTube</item>
    </string-array>
    <string-array name="pref_search_engine_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="project_page_uri">https://github.com/sazid/Browse/</string>

    <string name="email_uri">mailto:sazidozon@gmail.com</string>
    <string name="email_sub">Browse: Feedback</string>

    <string name="pref_header_about">About Browse</string>

    <string name="pref_title_email">Email developer</string>

    <string name="pref_project_page">Project page</string>
    <string name="url_field_hint">Enter URL or search Google...</string>

</resources>
