<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_desktop_mode_key"
        android:summary="@string/pref_description_desktop_mode"
        android:title="@string/pref_title_desktop_mode" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_home_page"
        android:inputType="text|textWebEditText"
        android:key="pref_home_page_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_home_page" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_search_engine_list_titles"
        android:entryValues="@array/pref_search_engine_list_values"
        android:key="search_engine_list_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_search_engine" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_image_loading_key"
        android:summary="@string/pref_description_image_loading"
        android:title="@string/pref_title_image_loading" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_cookies_key"
        android:title="@string/pref_title_cookies" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="pref_cookies_key"
        android:key="pref_third_party_cookies_key"
        android:title="@string/pref_title_third_party_cookies" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_mixed_content_key"
        android:summary="@string/pref_description_mixed_content"
        android:title="@string/pref_title_mixed_content" />

</PreferenceScreen>
